--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
+  "Logging": { 
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TelefericoWebAppContext": "Server=ARADSK274\\SQLEXPRESS;Database=TelefericoDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
