Classes fornecedor/valor

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TelefericoWebAppContext": "Server=ARADSK274\\SQLEXPRESS;Database=TelefericoDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TelefericoWebAppContext": "Server=DESKTOP-JD38I4E\\SQLEXPRESS;Database=TelefericoDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
